--- a/CS330/Labs/Lab1ArrayButton.html
+++ b/CS330/Labs/Lab1ArrayButton.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>lab 1</title>
+    <script src="Lab1ArrayButton.js"></script>
 </head>
 <body>
-    <form> <input type=button> Click ME!!!! </form>
+    <button onclick="ArrayWork()">Click ME!!!!</button>
     <div id="ArrayOut"> 
         Look at me! I'll change when the button is clicked.
     </div>
