--- a/CS330/Labs/Lab2Date.html
+++ b/CS330/Labs/Lab2Date.html
@@ -6,8 +6,8 @@
     <script src="Lab2Date.js"></script>
 </head>
 <body>
-    <button onclick="">Date-Time Alert pop-up</button>
-    <button onclick="">Date-Time on Page</button>
+    <button onclick="DateAlert()">Date-Time Alert pop-up</button>
+    <button onclick="DatePage()">Date-Time on Page</button>
     <select name="format" id="timeformat">
         <option value="24">24 hours</option>
         <option value="12">12 hours</option>
