--- a/CS330/Labs/Lab04Primitives.html
+++ b/CS330/Labs/Lab04Primitives.html
@@ -9,7 +9,7 @@
 
 <BODY>
 
-<canvas id="gl-canvas" width="512" height="512" style="border: 2cm solid red">
+<canvas id="gl-canvas" width="512" height="512" style="border: 10px solid red">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 
