--- a/CS330/Labs/Lab05ColorArray.html
+++ b/CS330/Labs/Lab05ColorArray.html
@@ -10,7 +10,7 @@
 <BODY>
 
 
-<canvas id="gl-canvas" width="512" height="512" "style=border >
+<canvas id="gl-canvas" width="512" height="512" style="border: 3px solid red" >
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 
@@ -21,7 +21,7 @@ out vec4 vColor;
 void
 main()
 {
-  gl_PointSize = 4.0;
+  gl_PointSize =22.0;
   gl_Position = aPosition;
   vColor = vec4(1.0,0.0,0.0,1.0);
   //vColor = vec4((1.0+aPosition.xyz)/2.0,1.0);
