--- a/CS330/Labs/Lab05ColorArray.html
+++ b/CS330/Labs/Lab05ColorArray.html
@@ -23,8 +23,8 @@ main()
 {
   gl_PointSize =22.0;
   gl_Position = aPosition;
-  vColor = vec4(1.0,0.0,0.0,1.0);
-  //vColor = vec4((1.0+aPosition.xyz)/2.0,1.0);
+  //vColor = vec4(1.0,0.0,0.0,1.0);
+  vColor = vec4((1.0+aPosition.xyz)/2.0,1.0);
 }
 </script>
 
