--- a/CS330/Labs/Lab06Slider.html
+++ b/CS330/Labs/Lab06Slider.html
@@ -42,9 +42,9 @@ main()
 }
 </script>
 <div>
-<input id="slider" type="range"
+1<input id="slider" type="range"
  min="1" max="9" step="1" value="1" />
-</div>
+</div>9
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MVnew.js"></script>
 <script type="text/javascript" src="Lab06Slider.js"></script>
