--- a/CS330/HW/HW03.html
+++ b/CS330/HW/HW03.html
@@ -36,7 +36,7 @@ main()
 </script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MVnew.js"></script>
-<script type="text/javascript" src="Lab04Primitives.js"></script>
+<script type="text/javascript" src="HW03.js"></script>
 
 </BODY>
 </HTML>
