--- a/CS330/HW/HW03.html
+++ b/CS330/HW/HW03.html
@@ -23,8 +23,8 @@ void
 main()
 {
 
-  gl_Position.x = t*iPosition.x +(1.0-t)*uPosition.x;
-  gl_Position.y = t*iPosition.y + (1.0-t) *uPosition.y;
+  gl_Position.x = (t*iPosition.x) +((1.0-t)*uPosition.x);
+  gl_Position.y = (t*iPosition.y) + ((1.0-t) *uPosition.y);
   gl_Position.z = 0.0;
   gl_Position.w = 1.0;
 }
