--- a/CS330/Labs/Lab10ColorCube.html
+++ b/CS330/Labs/Lab10ColorCube.html
@@ -7,7 +7,7 @@
 <body>
 <canvas id="gl-canvas" width="512"" height="512"> </canvas>
 
-
+<button id = "rotateToggle">Toggle Rotation</button>
 <button id= "xButton">Rotate X</button>
 <button id= "yButton">Rotate Y</button>
 <button id= "zButton">Rotate Z</button>
