--- a/CS330/HW/HW04.html
+++ b/CS330/HW/HW04.html
@@ -2,13 +2,16 @@
 <html>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-<title>Lab 09 Color Cube</title>
+<title>Homework 4</title>
 </HEAD>
 <body>
-
 <canvas id="gl-canvas" width="512"" height="512"> </canvas>
 
-<button id = "ButtonT">Toggle Morph</button>
+<button id = "rotateToggle">Toggle Rotation</button>
+<button id= "xButton">Rotate X</button>
+<button id= "yButton">Rotate Y</button>
+<button id= "zButton">Rotate Z</button>
+<button id = "morphBtn">Toggle Morphing</button>
 <script id="vertex-shader" type="x-shader/x-vertex">
 #version 300 es
 
@@ -22,26 +25,26 @@ void main()
 {
     // Compute the sines and cosines of theta for each of
     //   the three axes in one computation.
-    vec3 angles = radians( uTheta );
-    vec3 c = cos( angles );
-    vec3 s = sin( angles );
+    vec3 angles = radians(uTheta);
+    vec3 c = cos(angles);
+    vec3 s = sin(angles);
 
     // Remeber: thse matrices are column-major
-    mat4 rx = mat4( 1.0,  0.0,  0.0, 0.0,
+    mat4 rx = mat4(1.0,  0.0,  0.0, 0.0,
 		    0.0,  c.x,  s.x, 0.0,
 		    0.0, -s.x,  c.x, 0.0,
-		    0.0,  0.0,  0.0, 1.0 );
+		    0.0,  0.0,  0.0, 1.0);
 
-    mat4 ry = mat4( c.y, 0.0, -s.y, 0.0,
+    mat4 ry = mat4(c.y, 0.0, -s.y, 0.0,
 		    0.0, 1.0,  0.0, 0.0,
 		    s.y, 0.0,  c.y, 0.0,
-		    0.0, 0.0,  0.0, 1.0 );
+		    0.0, 0.0,  0.0, 1.0);
 
 
-    mat4 rz = mat4( c.z, s.z, 0.0, 0.0,
+    mat4 rz = mat4(c.z, s.z, 0.0, 0.0,
 		    -s.z,  c.z, 0.0, 0.0,
 		    0.0,  0.0, 1.0, 0.0,
-		    0.0,  0.0, 0.0, 1.0 );
+		    0.0,  0.0, 0.0, 1.0);
 
     vColor = aColor;
     gl_Position = rz * ry * rx * aPosition;
