--- a/CS330/HW/HW04.html
+++ b/CS330/HW/HW04.html
@@ -16,10 +16,13 @@
 #version 300 es
 
 in  vec4 aPosition;
+in vec4 iPosition;
+in vec4 uPosition;
 in  vec4 aColor;
 out vec4 vColor;
 
 uniform vec3 uTheta;
+uniform float t;
 
 void main()
 {
@@ -46,9 +49,11 @@ void main()
 		    0.0,  0.0, 1.0, 0.0,
 		    0.0,  0.0, 0.0, 1.0);
 
+    vec4 aPosition = vec4((t*iPosition.x) +((1.0-t)*uPosition.x), (t*iPosition.y) + ((1.0-t) *uPosition.y), (t*iPosition.z) + ((1.0-t) *uPosition.z), 1.0);
+
     vColor = aColor;
     gl_Position = rz * ry * rx * aPosition;
-    gl_Position.z = -gl_Position.z;
+    //gl_Position.z = -gl_Position.z;
 }
 </script>
 
