--- a/CS330/Labs/Lab10ColorCube.html
+++ b/CS330/Labs/Lab10ColorCube.html
@@ -5,7 +5,7 @@
 <title>Lab 10 Color Cube</title>
 </HEAD>
 <body>
-<canvas id="gl-canvas" width="512"" height="512"> </canvas>
+<canvas id="gl-canvas" width="512" height="512"> </canvas>
 
 <button id = "rotateToggle">Toggle Rotation</button>
 <button id= "xButton">Rotate X</button>
