--- a/CS330/LabKey/Lab19TextureImageKEY.html
+++ b/CS330/LabKey/Lab19TextureImageKEY.html
@@ -9,11 +9,11 @@
 
 <BODY>
 
-<canvas id="gl-canvas" width="512" height="512" "style=border >
+<canvas id="gl-canvas" width="512" height="512" style="border: 3px solid red" >
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 
-<img id = "texImage" src = "tiger.png" hidden></img>
+<img id = "texImage" src = "TIGER.png" hidden></img>
 
 <button id = "ButtonX">Rotate X</button>
 <button id = "ButtonY">Rotate Y</button>
