--- a/CS330/Labs/Lab19TextureImage.html
+++ b/CS330/Labs/Lab19TextureImage.html
@@ -9,10 +9,11 @@
 
 <BODY>
 
-<canvas id="gl-canvas" width="512" height="512" "style=border >
+<canvas id="gl-canvas" width="512" height="512" style="border: 3px solid black " >
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 
+<img id="texImage" src = "TIGER.png" hidden></img>
 <button id = "ButtonX">Rotate X</button>
 <button id = "ButtonY">Rotate Y</button>
 <button id = "ButtonZ">Rotate Z</button>
@@ -85,7 +86,7 @@ main()
 
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MVnew.js"></script>
-<script type="text/javascript" src="Lab19TextureImageKEY.js"></script>
+<script type="text/javascript" src="Lab19TextureImage.js"></script>
 
 </BODY>
 </HTML>
