--- a/CS330/Labs/Lab22Robot.html
+++ b/CS330/Labs/Lab22Robot.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<canvas id="gl-canvas" width="512"" height="512"> </canvas>
+<canvas id="gl-canvas" width="512" height="512"> </canvas>
 <button id = "ButtonT">Toggle Rotation</button>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
@@ -68,7 +68,7 @@ void main()
 }
 </script>
 
-<script src="../Common/InitShaders.js"></script>
+<script src="../Common/initShaders.js"></script>
 <script src="../Common/MVnew.js"></script>
 <script src="Lab22Robot.js"></script>
 
